@@ -1,3 +1,5 @@
+* Fix `BUGGY_GEBID` feature test. [Diego Perini, jddalton]
+
 * Removed strict check for (even/odd) in the Patterns.spseudos regexp and simplify regexps in the `an+b` processing in compileSelector(). [Diego Perini, jddalton]
 
 * Rename variable `isClassNameLowered` to `isQuirks`. [Diego Perini]
